[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/PlayDeck.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/Contrail/Contrail_48.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scenes/AppBackground.tscn" type="PackedScene" id=3]
[ext_resource path="res://Styles/MainTheme.tres" type="Theme" id=4]
[ext_resource path="res://Scenes/LayoutHelpers/TabDock.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/icons/buttons/home.png" type="Texture" id=6]

[sub_resource type="Animation" id=2]
resource_name = "slide_cards_down"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 20, 106 ), Vector2( 20, 220 ) ]
}

[sub_resource type="Animation" id=1]
resource_name = "minimize_drawer"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath(".:rect_position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 309 ), Vector2( 0, 600 ) ]
}

[node name="PlayDeck" type="Node2D"]
script = ExtResource( 1 )

[node name="UI" type="Control" parent="."]
margin_right = 1024.0
margin_bottom = 600.0

[node name="AppBackground" parent="UI" instance=ExtResource( 3 )]

[node name="DeckName" type="Label" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -153.5
margin_top = 30.0
margin_right = 153.5
margin_bottom = 79.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Deck Name"
align = 1
valign = 1

[node name="BigCardsArea" type="Control" parent="UI"]
anchor_top = 0.177
anchor_right = 1.0
anchor_bottom = 0.44
margin_left = 20.0
margin_top = -0.199997
margin_right = -16.0
margin_bottom = -3.05176e-05

[node name="BigCards" type="HBoxContainer" parent="UI/BigCardsArea"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 4
alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/BigCardsArea"]
anims/slide_cards_down = SubResource( 2 )

[node name="DrawerPanel" type="Panel" parent="UI"]
anchor_top = 0.515
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 4 )
theme_type_variation = "Tray"

[node name="ScrollContainer" type="ScrollContainer" parent="UI/DrawerPanel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 64.0
margin_top = 10.0
margin_right = -64.0
scroll_horizontal_enabled = false

[node name="CardDrawer" type="HBoxContainer" parent="UI/DrawerPanel/ScrollContainer"]
unique_name_in_owner = true
margin_right = 896.0
margin_bottom = 281.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 50
alignment = 1

[node name="Minimize" type="CheckButton" parent="UI/DrawerPanel"]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -98.0
margin_top = -45.0
margin_right = -16.0
grow_horizontal = 0
theme = ExtResource( 4 )
theme_type_variation = "HideTray"

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/DrawerPanel"]
anims/minimize_drawer = SubResource( 1 )

[node name="TabDock" parent="UI" instance=ExtResource( 5 )]
margin_left = 71.0
margin_top = 3.0
margin_right = 293.0
margin_bottom = 223.0
rect_scale = Vector2( 0.25, 0.25 )

[node name="HomeButton" type="Button" parent="UI/TabDock"]
margin_left = 2.0
margin_right = 220.0
margin_bottom = 218.0
icon = ExtResource( 6 )
icon_align = 1

[connection signal="toggled" from="UI/DrawerPanel/Minimize" to="." method="_on_Minimize_toggled"]
[connection signal="pressed" from="UI/TabDock/HomeButton" to="." method="_on_Home_pressed"]
